syntax = "proto3";

option java_multiple_files = true;
option java_package = "anbrain.qa.rococo.grpc";
option java_outer_classname = "MuseumProto";

package rococo;

service MuseumService {
  // Получить музей по ID
  rpc GetMuseum(MuseumRequest) returns (MuseumResponse);
  // Получить все музеи
  rpc GetAllMuseums(AllMuseumsRequest) returns (AllMuseumsResponse);
  // Получить музей по названию
  rpc SearchMuseumsByTitle(SearchMuseumsRequest) returns (SearchMuseumsResponse);
  // Добавить музей
  rpc CreateMuseum(CreateMuseumRequest) returns (MuseumResponse);
  // Обновить музей
  rpc UpdateMuseum(UpdateMuseumRequest) returns (MuseumResponse);
}

message MuseumRequest {
  string id = 1;
}

message AllMuseumsRequest {
  int32 page = 1;
  int32 size = 2;
}

message SearchMuseumsRequest {
  string title = 1;
}

message CreateMuseumRequest {
  string title = 1;
  string description = 2;
  string photo = 3;
  Geo geo = 4;
}

message UpdateMuseumRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string photo = 4;
  Geo geo = 5;
}

message MuseumResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string photo = 4;
  Geo geo = 5;
}

message AllMuseumsResponse {
  repeated MuseumResponse museums = 1;
  int32 total_count = 2;
}

message SearchMuseumsResponse {
  repeated MuseumResponse museums = 1;
}

message Geo {
  string city = 1;
  Country country = 2;
}

message Country {
  string id = 1;
  string name = 2;
}